--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ The Samson School was a Jewish free school of trans-regional significance, which
             <a href="https://museumwolfenbuettel.github.io/The-Gr-nderzeit-and-increasing-civic-activity-Gr-nderzeit/" class="button small-button">14</a>
             
             <!-- Кнопка 16, ведущая на следующую страницу -->
-            <a href="https://museumwolfenbuettel.github.io/Buerger-Museum/" class="button">16</a>
+            <a href="https://museumwolfenbuettel.github.io/1914-to-1918-Trenches-and-War-Communes/" class="button">16</a>
         </div>
 
         <!-- Логотип под кнопками -->
